adjusted url for atom feed

--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ exclude:
   -notes.markdown
 
 title:          Restiffbard
-feed:           atom.xml
+feed:           /atom.xml
 description:    "by Christopher Cabanillas"
 
 
